--- a/sections/accordion-block.liquid
+++ b/sections/accordion-block.liquid
@@ -12,7 +12,11 @@
           </h4>
         </button>
 
-        <div class="accordion-element__content [ js-content ]" role="region" aria-labelledby="accordion_{{ block.settings.id }}">
+        <div
+          class="accordion-element__content [ js-content ]"
+          role="region"
+          aria-labelledby="accordion_{{ block.settings.id }}"
+        >
           <div class="accordion-element__inner">
             {{ block.settings.copy }}
           </div>
