--- a/sections/main-cart.liquid
+++ b/sections/main-cart.liquid
@@ -95,12 +95,7 @@
               Your cart is empty, but it doesn't have to stay that way!
             </p>
             <p class="cart__wrap__form__table__body__emptybutton">
-              <a href="/collections/all" class="button"
-                >Shop Now
-                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="16" viewBox="0 0 22 16">
-                  <path fill="#FFF" fill-rule="evenodd" d="M13.4765714,0.0234857143 L21.452,8.00005714 L13.4765714,15.9765714 L11.8091714,14.3091714 L16.9288571,9.18948571 L0.142857143,9.18971429 L0.142857143,6.80914286 L16.9278571,6.80848571 L11.8091714,1.69088571 L13.4765714,0.0234857143 Z" />
-                </svg>
-              </a>
+              <a href="/collections/all" class="button">Shop Now</a>
             </p>
           {% endif %}
         </tbody>
