--- a/source/style.scss
+++ b/source/style.scss
@@ -15,6 +15,7 @@ Base includes
 
 @import 'sections/flickity';
 @import 'sections/header';
+@import 'sections/choices';
 @import 'sections/footer';
 @import 'sections/mobile-navigation';
 @import 'sections/announcement';
