--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -22,9 +22,11 @@
         {% endcomment %}
         <a href="{{ product.url }}" class="collection-grid__list__item collection-grid__list__item--product">
           <div class="collection-grid__list__item__image">
-            {%- if product.featured_image != blank -%}
-              {{ product.featured_image | image_url: width: 400, height: 400 | image_tag }}
-            {%- endif -%}
+           {% if product.featured_image %}
+                {{ product.featured_image | image_url: width: 400, height: 400 | image_tag }}
+              {% else %}
+                <img src="{{ 'placeholder.jpeg' | asset_url }}" alt="placeholder image" width="400" height="400" loading="lazy">
+              {% endif %}
           </div>
           <div class="collection-grid__list__item__title">
             <h6>
