updates to the paget theme coluors

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -80,7 +80,9 @@
         --grey-light: #BABABA;
         --black: #000000;
         --yellow-light: #FFEFB1;
+        --orange: #F05A30;
         --pink-light: #F7D8DF;
+        --pink: #EC208F;
         --purple-light: #DFDFEE;
         --blue-light: #E1EDF9;
         --blue-mid: #A5D1D9;
@@ -157,9 +159,9 @@
 
     {% section 'header' %}
 
-      {{ content_for_layout }}
+    {{ content_for_layout }}
 
-      {% section 'instagram-block' %}
+    {% section 'instagram-block' %}
 
     {% comment %}
       Side cart
