--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -4,10 +4,7 @@
       <div class="banner-blog-text__constraint">
         <h6 class="white">
           <b>
-            {% for tag in article.tags %}
-              {{ tag }}
-              {% unless forloop.last %} | {% endunless %}
-            {% endfor %}
+            {{ article.tags | join: ' | ' | upcase }}
           </b>
         </h6>
         <h1 class="white">
@@ -116,26 +113,20 @@
                   width="640"
                   height="480"
                 >
+                <div class="animatedPanel [ js-inview ]">
+                  <div class="animatedPanel__colour"></div>
+                </div>
               </div>
 
-              <div class="related-articles-grid__item__content">
+              <div class="related-articles-grid__item__content [ js-inview ]">
                 <h6>
-                  <b>
-                    {% for tag in related_article.tags %}
-                      {{ tag }}
-                      {% unless forloop.last %} | {% endunless %}
-                    {% endfor -%}
-                  </b>
+                  <b>{{ related_article.tags | join: ' | ' }}</b>
                 </h6>
                 <h4 class="colour--green">
-                  <b>
-                    {{ related_article.title }}
-                  </b>
+                  <b>{{ related_article.title }}</b>
                 </h4>
                 <p>{{ related_article.excerpt }}</p>
-                <p>
-                  <span class="arrow-link">Read now</span>
-                </p>
+                <p><span class="arrow-link">Read now</span></p>
               </div>
             </a>
           {% endunless %}
@@ -146,7 +137,6 @@
     {% assign recent_articles = blog.articles | sort: 'published_at' | reverse %}
 
     {% for recent_article in recent_articles %}
-
       {% if counter < 3 %}
         {% if matching_articles contains recent_article.id or matching_articles contains article.id %}
         {% else %}
@@ -162,7 +152,7 @@
               >
             </div>
 
-            <div class="related-articles-grid__item__content">
+            <div class="related-articles-grid__item__content [ js-inview ]">
               <h6>
                 <b>
                   {% for tag in recent_article.tags %}
