--- a/source/utilities/fonts.scss
+++ b/source/utilities/fonts.scss
@@ -156,6 +156,10 @@ hr {
   color: white;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 /*------------------------------------------------------------------
 Link hovers
 ------------------------------------------------------------------*/
