--- a/assets/style.css
+++ b/assets/style.css
@@ -185,6 +185,10 @@ hr {
   color: #fff;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 a.link, a:not([class]) {
   box-shadow: inset 0 -1px 0 var(--green), 0 1px 0 var(--green);
   color: var(--green);
@@ -1713,7 +1717,7 @@ body .choices .choices__list--dropdown .choices__item {
 }
 
 .mobile-navigation {
-  z-index: 2;
+  z-index: 3;
   visibility: hidden;
   opacity: 0;
   transition: all .2s cubic-bezier(.365, .04, .44, 1);
@@ -2485,8 +2489,11 @@ body .choices .choices__list--dropdown .choices__item {
   transform: scale(.8);
 }
 
-.search-pane-close path {
-  fill: var(--green);
+@media only screen and (max-width: 767px) {
+  .search-pane-close img {
+    width: 3rem;
+    height: 3rem;
+  }
 }
 
 .search-pane-input {
@@ -2501,6 +2508,12 @@ body .choices .choices__list--dropdown .choices__item {
   position: relative;
   overflow: hidden;
   box-shadow: 0 10px 30px #0000000d;
+}
+
+@media only screen and (max-width: 767px) {
+  .search-pane-input {
+    height: 62px;
+  }
 }
 
 .search-pane-input input {
@@ -2538,6 +2551,12 @@ body .choices .choices__list--dropdown .choices__item {
   opacity: .8;
 }
 
+@media only screen and (max-width: 767px) {
+  .search-pane-input input {
+    font-size: 2rem;
+  }
+}
+
 .search-pane-results {
   z-index: 4;
   max-width: var(--slim-content-width);
@@ -2548,6 +2567,12 @@ body .choices .choices__list--dropdown .choices__item {
   transition: all .5s cubic-bezier(.365, .04, .44, 1);
   position: relative;
   transform: translateY(.5rem);
+}
+
+@media only screen and (max-width: 767px) {
+  .search-pane-results {
+    padding: 4rem 0;
+  }
 }
 
 .search-visible .search-pane {
@@ -2605,6 +2630,12 @@ body .choices .choices__list--dropdown .choices__item {
   width: calc(33.3333% - 2rem);
   margin: 0 1rem 2rem;
   padding: 1rem;
+}
+
+@media only screen and (max-width: 767px) {
+  .search-pane-results-grid__placeholder {
+    padding: 0;
+  }
 }
 
 .search-pane-results-grid__placeholder__image {
@@ -3449,6 +3480,39 @@ ol > li li:before {
   transform: translateY(-50%)translateX(-50%)rotate(-220deg);
 }
 
+.articles-wave3, .articles-wave4, .related-articles-wave3, .related-articles-wave4 {
+  pointer-events: none;
+  z-index: -1;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(0%)translateX(-50%)rotate(-40deg);
+}
+
+.articles-wave3:after, .articles-wave4:after, .related-articles-wave3:after, .related-articles-wave4:after {
+  content: "";
+  padding-bottom: 56.2225%;
+  display: block;
+  position: relative;
+}
+
+.articles-wave3 svg, .articles-wave4 svg, .related-articles-wave3 svg, .related-articles-wave4 svg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.articles-wave3 path, .articles-wave4 path, .related-articles-wave3 path, .related-articles-wave4 path {
+  stroke: var(--green);
+}
+
+.articles-wave3, .related-articles-wave3 {
+  transform: translateY(-50%)translateX(-50%)rotate(-220deg);
+}
+
 .articles-filters, .related-articles-filters {
   max-width: var(--content-width);
   flex-wrap: wrap;
@@ -3471,6 +3535,7 @@ ol > li li:before {
   max-width: var(--inner-content-width);
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   margin: 0 auto 2rem;
   display: flex;
 }
@@ -3504,6 +3569,7 @@ ol > li li:before {
 
 .articles-grid__item__image, .related-articles-grid__item__image {
   margin-bottom: 2rem;
+  position: relative;
 }
 
 .articles-grid__item__image img, .related-articles-grid__item__image img {
@@ -3511,7 +3577,15 @@ ol > li li:before {
 }
 
 .articles-grid__item__content, .related-articles-grid__item__content {
+  opacity: 0;
   padding-bottom: 5rem;
+  transition: all 1s cubic-bezier(.365, .04, .44, 1);
+  transform: translateX(-1rem);
+}
+
+.articles-grid__item__content.inview, .related-articles-grid__item__content.inview {
+  opacity: 1;
+  transform: translateX(0);
 }
 
 .articles-grid__item__content h6, .related-articles-grid__item__content h6 {
@@ -3531,6 +3605,107 @@ ol > li li:before {
 
 .articles-grid__item {
   margin-bottom: 6rem;
+}
+
+.animatedPanel {
+  z-index: 9;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.animatedPanel__colour {
+  content: "";
+  background: var(--blue-light);
+  transform-origin: 0 0;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
+  display: block;
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  transform: scaleX(0);
+}
+
+.animatedPanel:before {
+  content: "";
+  background: var(--off-white);
+  transform-origin: 0 0;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
+  display: block;
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  transform: scaleX(1);
+}
+
+@keyframes overPanelImage {
+  0% {
+    transform: scaleX(0);
+  }
+
+  38% {
+    transform: scaleX(1);
+  }
+
+  40% {
+    transform-origin: 0 0;
+    transform: scaleX(1);
+  }
+
+  41% {
+    transform-origin: 100% 100%;
+    transform: scaleX(1);
+  }
+
+  100% {
+    transform-origin: 100% 100%;
+    transform: scaleX(0);
+  }
+}
+
+@keyframes underPanelImage {
+  0% {
+    transform: scaleX(1);
+  }
+
+  38% {
+    transform: scaleX(1);
+  }
+
+  40% {
+    transform-origin: 0 0;
+    transform: scaleX(1);
+  }
+
+  41% {
+    transform-origin: 100% 100%;
+    transform: scaleX(1);
+  }
+
+  100% {
+    transform-origin: 100% 100%;
+    transform: scaleX(0);
+  }
+}
+
+.animatedPanel.inview:before {
+  transition-timing-function: cubic-bezier(.25, .46, .45, .94);
+  animation-name: underPanelImage;
+  animation-duration: 1.1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+.animatedPanel.inview .animatedPanel__colour {
+  transition-timing-function: cubic-bezier(.25, .46, .45, .94);
+  animation-name: overPanelImage;
+  animation-duration: 1.1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 
 .related-products {
@@ -3756,6 +3931,88 @@ ol > li li:before {
   font-size: 3rem;
   font-weight: 500;
   line-height: 1.4;
+}
+
+html [data-theme="C-Section Delivery"], html [data-theme="V-Delivery"] {
+  background: var(--purple-light);
+}
+
+html [data-theme="C-Section Delivery"] .announcement, html [data-theme="C-Section Delivery"] .related-products, html [data-theme="C-Section Delivery"] .header-nav.coloured:after, html [data-theme="C-Section Delivery"] .header-actions:after, html [data-theme="V-Delivery"] .announcement, html [data-theme="V-Delivery"] .related-products, html [data-theme="V-Delivery"] .header-nav.coloured:after, html [data-theme="V-Delivery"] .header-actions:after {
+  background: var(--orange);
+}
+
+html [data-theme="C-Section Delivery"] .animate-white-to-green, html [data-theme="V-Delivery"] .animate-white-to-green {
+  background-image: linear-gradient(90deg, var(--orange) 50%, white 50%);
+}
+
+html [data-theme="C-Section Delivery"] .choices__inner, html [data-theme="V-Delivery"] .choices__inner, html [data-theme="C-Section Delivery"] .choices__inner:hover .choices__inner, html [data-theme="V-Delivery"] .choices__inner:hover .choices__inner {
+  border-color: var(--orange);
+}
+
+html [data-theme="C-Section Delivery"] .header-actions__cart__count, html [data-theme="V-Delivery"] .header-actions__cart__count {
+  color: var(--orange);
+}
+
+html [data-theme="C-Section Delivery"] .product, html [data-theme="V-Delivery"] .product {
+  background: var(--purple-light);
+}
+
+html [data-theme="C-Section Delivery"] .product-details *, html [data-theme="V-Delivery"] .product-details * {
+  color: var(--orange);
+}
+
+html [data-theme="C-Section Delivery"] .product-details .button, html [data-theme="V-Delivery"] .product-details .button {
+  background: var(--orange);
+  color: var(--purple-light);
+}
+
+html [data-theme="C-Section Delivery"] .product-details .accordion-element__trigger:before, html [data-theme="C-Section Delivery"] .product-details .accordion-element__trigger:after, html [data-theme="V-Delivery"] .product-details .accordion-element__trigger:before, html [data-theme="V-Delivery"] .product-details .accordion-element__trigger:after {
+  background: var(--orange);
+}
+
+html [data-theme="C-Section Delivery"] .product-details .accordion-element__item, html [data-theme="V-Delivery"] .product-details .accordion-element__item {
+  border-color: var(--orange);
+}
+
+html [data-theme="Breast Feeding"] {
+  background: var(--pink-light);
+}
+
+html [data-theme="Breast Feeding"] .announcement, html [data-theme="Breast Feeding"] .related-products, html [data-theme="Breast Feeding"] .header-nav.coloured:after, html [data-theme="Breast Feeding"] .header-actions:after {
+  background: var(--pink);
+}
+
+html [data-theme="Breast Feeding"] .animate-white-to-green {
+  background-image: linear-gradient(90deg, var(--pink) 50%, white 50%);
+}
+
+html [data-theme="Breast Feeding"] .choices__inner, html [data-theme="Breast Feeding"] .choices__inner:hover .choices__inner {
+  border-color: var(--pink);
+}
+
+html [data-theme="Breast Feeding"] .header-actions__cart__count {
+  color: var(--pink);
+}
+
+html [data-theme="Breast Feeding"] .product {
+  background: var(--pink-light);
+}
+
+html [data-theme="Breast Feeding"] .product-details * {
+  color: var(--pink);
+}
+
+html [data-theme="Breast Feeding"] .product-details .button {
+  background: var(--pink);
+  color: var(--pink-light);
+}
+
+html [data-theme="Breast Feeding"] .product-details .accordion-element__trigger:before, html [data-theme="Breast Feeding"] .product-details .accordion-element__trigger:after {
+  background: var(--pink);
+}
+
+html [data-theme="Breast Feeding"] .product-details .accordion-element__item {
+  border-color: var(--pink);
 }
 
 .collection-grid {
