--- a/source/sections/related-articles.scss
+++ b/source/sections/related-articles.scss
@@ -24,6 +24,26 @@
         transform: translateY(-50%) translateX(-50%) rotate(-220deg);
     }
 
+    &-wave3,
+    &-wave4 {
+        @include svg(1366, 768);
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        transform: translateY(0%) translateX(-50%) rotate(-40deg);
+        pointer-events: none;
+        z-index: -1;
+
+        path {
+            stroke: var(--green);
+        }
+    }
+
+    &-wave3 {
+        transform: translateY(-50%) translateX(-50%) rotate(-220deg);
+    }
+
     &-filters {
         max-width: var(--content-width);
         margin: 0 auto 2rem;
@@ -48,6 +68,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        align-items: center;
     }
 
     &-grid {
@@ -73,6 +94,7 @@
 
             &__image {
                 margin-bottom: 2rem;
+                position: relative;
 
                 img {
                     border-radius: 4px;
@@ -81,6 +103,14 @@
 
             &__content {
                 padding-bottom: 5rem;
+                transition: all $slow;
+                opacity: 0;
+                transform: translateX(-1rem);
+
+                &.inview {
+                    opacity: 1;
+                    transform: translateX(0);
+                }
 
                 h6 {
                     text-transform: uppercase;
@@ -102,5 +132,96 @@
 
     &-grid__item {
         margin-bottom: 6rem;
+    }
+}
+
+$animation: 1.1s;
+
+.animatedPanel {
+    @include full;
+    z-index: 9;
+
+    &__colour {
+        @include pseudo;
+        position: absolute;
+        width: calc(100% + 2px);
+        height: calc(100% + 2px);
+        left: -1px;
+        top: -1px;
+        background: var(--blue-light);
+        transform: scaleX(0);
+        transform-origin: 0% 0%;
+    }
+
+    &:before {
+        @include pseudo;
+        position: absolute;
+        width: calc(100% + 2px);
+        height: calc(100% + 2px);
+        left: -1px;
+        top: -1px;
+        background: var(--off-white);
+        transform: scaleX(1);
+        transform-origin: 0% 0%;
+    }
+
+    @keyframes overPanelImage {
+        0% {
+            transform: scaleX(0);
+        }
+        38% {
+            transform: scaleX(1);
+        }
+        40% {
+            transform-origin: 0% 0%;
+            transform: scaleX(1);
+        }
+        41% {
+            transform-origin: 100% 100%;
+            transform: scaleX(1);
+        }
+        100% {
+            transform-origin: 100% 100%;
+            transform: scaleX(0);
+        }
+    }
+
+    @keyframes underPanelImage {
+        0% {
+            transform: scaleX(1);
+        }
+        38% {
+            transform: scaleX(1);
+        }
+        40% {
+            transform-origin: 0% 0%;
+            transform: scaleX(1);
+        }
+        41% {
+            transform-origin: 100% 100%;
+            transform: scaleX(1);
+        }
+        100% {
+            transform-origin: 100% 100%;
+            transform: scaleX(0);
+        }
+    }
+
+    &.inview {
+        &:before {
+            animation-name: underPanelImage;
+            animation-duration: $animation;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+            transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        }
+
+        .animatedPanel__colour {
+            animation-name: overPanelImage;
+            animation-duration: $animation;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+            transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        }
     }
 }
